<resources>
    <string name="app_name">Destinasi Wisata</string>
    <string name="imgLogo">Logo</string>
    <string name="txt_Main_Name">Syifa Amalia</string>
    <string name="txt_Main_NIM">3420180019</string>
    <string name="txt_Main_Email">blogsyifa@gmail.com</string>
    <string name="action_language">Pengaturan Bahasa</string>
    <string name="img_about">Tentang Saya</string>
    <string name="imageView_Main_Banner">Banner</string>
    <string name="txt_Tempat">Destinasi Wisata</string>
    <string name="txt_Lokasi">Terletak</string>
    <string name="txt_Alamat">Alamat Lengkap</string>
    <string name="txt_Deskripsi">Deskripsi Singkat</string>
    <string name="txt_Foto">Foto-foto Destinasi</string>
    <string name="txt_Sejarah">Sejarah</string>
    <string name="txt_Info">Info Lebih Lengkap</string>
    <string name="img_List">Foto Utama</string>
    <string name="imageView_Template_Gambar">Template Image</string>
    <string name="textView_Template_Header">Header</string>
    <string name="textView_Template_Lokasi">Lokasi</string>
    <string name="imageView_Detail_Banner">Detail Banner</string>
    <string name="imageView_Detail_Gambar">Detail Picture</string>
    <string name="textView_Detail_Header">EARTHSHAKER</string>
    <string name="textView_List_Val">Value</string>
    <string name="txt_judul1">Masjid Raya Baiturrahman</string>
    <string name="txt_lok1">Kota Banda Aceh, Aceh</string>
    <string name="txt_loklengkap1">Jl. Moh. Jam No.1, Kp. Baru, Kec. Baiturrahman, Kota Banda Aceh, Aceh</string>
    <string name="txt_desc1">
        Destinasi wisata religi di Indonesia yang pertama adalah Masjid Baiturrahman yang telah  dibangun sejak era Kesultanan Aceh. Masjid ini juga sempat hancur akibat serangan Belanda, sebelum kemudian dibangun kembali pada 1879 - 1881 dengan arsitektur bergaya Moghul (India).
    </string>
    <string name="txt_sejarah1">
        Masjid Raya yang asli dibangun pada tahun 1612 di masa pemerintahan Sultan Iskandar Muda. Ada juga yang mengatakan bahwa Masjid Raya Baiturrahman yang asli dibangun lebih awal pada tahun 1292 oleh Sultan Alaidin Mahmudsyah. Masjid Kerajaan yang asli menampilkan atap jerami berlapis-lapis yang merupakan fitur khas arsitektur Aceh.
    </string>
    <string name="txt_shortdesc1">
        Selain itu, objek wisata religi di Indonesia satu ini terkenal karena kekokohannya yang tak hancur meskipun telah diterjang bencana Tsunami pada tahun 2004 silam.
    </string>
    <string name="img_no1_1">Foto Masjid Raya Baiturrahman</string>
    <string name="img_no1_2">Foto Masjid Raya Baiturrahman</string>
    <string name="img_no1_3">Foto Masjid Raya Baiturrahman</string>
    <string name="img_no1_4">Foto Masjid Raya Baiturrahman</string>
    <string name="img_no1_5">Foto Masjid Raya Baiturrahman</string>
    <string name="txt_judul2">Masjid Cheng Ho</string>
    <string name="txt_lok2">Kota Surabaya, Jawa Timur</string>
    <string name="txt_loklengkap2">Jl. Gading No.2, Ketabang, Kec. Genteng, Kota SBY, Jawa Timur</string>
    <string name="txt_desc2">
        Laksamana Cheng Ho merupakan pelaut asal darat Tiongkok yang dipercaya turut berperan dalam persebaran agama Islam di Nusantara. Akan jasanya ini, ada banyak sekali masjid di Indonesia yang berdiri sebagai bentuk penghormatan kepada sosok Laksamana Cheng Ho, seperti Masjid Cheng Ho di Surabaya.
    </string>
    <string name="txt_sejarah2">
        Pada abad ke 15 pada masa Dinasti Ming (1368-1643) orang-orang Tionghoa dari Yunnan mulai berdatangan untuk menyebarkan agama Islam, terutama di pulau Jawa. Yang kemudian Laksamana Cheng Ho (Admiral Zhang Hee) atau yang lebih dikenal dengan Sam Poo Kong atau Pompu Awang pada tahun 1410 dan tahun 1416 dengan armada yang dipimpinnya mendarat di pantai Simongan, Semarang. Selain itu dia juga sebagai utusan Kaisar Yung Lo untuk mengunjungi Raja Majapahit yang juga bertujuan untuk menyebarkan agama Islam. Untuk mengenang perjuangan dan dakwah Laksamana Cheng Hoo dan warga Tionghoa muslim juga ingin memiliki sebuah masjid dengan gaya Tionghoa maka pada tanggal 13 Oktober 2002 diresmikan Masjid dengan arsitektur Tiongkok ini.
    </string>
    <string name="txt_shortdesc2">
        Tak cuma di Surabaya, di Palembang juga terdapat Masjid Cheng Ho yang bisa jadi alternatif wisata religi di Indonesa lainnya. Sama seperti Masjid Cheng Ho di Surabaya, Masjid Cheng Ho di Palembang juga tampil unik dengan arstektur perpaduan unsur Cina, Melayu, dan juga Nusantara.
    </string>
    <string name="img_no2_1">Foto Masjid Cheng Ho</string>
    <string name="img_no2_2">Foto Masjid Cheng Ho</string>
    <string name="img_no2_3">Foto Masjid Cheng Ho</string>
    <string name="img_no2_4">Foto Masjid Cheng Ho</string>
    <string name="img_no2_5">Foto Masjid Cheng Ho</string>
    <string name="txt_judul3">Masjid Agung Jawa Tengah, Semarang</string>
    <string name="txt_lok3">Kota Semarang, Jawa Tengah</string>
    <string name="txt_loklengkap3">Jl. Gajah Raya, Sambirejo, Kec. Gayamsari, Kota Semarang, Jawa Tengah</string>
    <string name="txt_desc3">
        Semenjak berdiri pada tahun 2006 dan diresmikan oleh Presiden Susilo Bambang Yudhoyono, Masjid Agung Jawa Tengah yang berlokasi di Semarang menjadi salah satu destinasi wisata religi terbaik di Indonesia. Masjid ini berdiri di atas lahan 10 hektar dan memiliki gaya arsitek perpaduan Jawa, Islam, dan Romawi.
    </string>
    <string name="txt_sejarah3">
        Keberadaan bangunan masjid ini tak lepas dari Masjid Besar Kauman Semarang. Pembangunan MAJT berawal dari kembalinya tanah banda (harta) wakaf milik Masjid Besar Kauman Semarang yang telah sekian lama tak tentu rimbanya. Raibnya banda wakaf Masjid Besar Kauman Semarang berawal dari proses tukar guling tanah wakaf Masjid Kauman seluas 119.127 ha yang dikelola oleh BKM (Badan Kesejahteraan Masjid) bentukan Bidang Urusan Agama Depag Jawa Tengah. Dengan alasan tanah itu tidak produktif, oleh BKM tanah itu di tukar guling dengan tanah seluas 250 ha di Demak lewat PT. Sambirejo. Kemudian berpindah tangan ke PT. Tensindo milik Tjipto Siswoyo.
    </string>
    <string name="txt_shortdesc3">
        Dari awal masa pembangunan, masjid ini memang telah dipersiapkan sebagai obyek wisata religi di Indonesia. Maka tak heran, Masjid Agung ini dilengkapi dengan wisma penginapan berkapasitas 23 kamar. Jadi, para peziarah yang ingin bermalam di tempat ibadah ini selagi melakukan wisata religi dapat bermalam dan memanfaatkan fasilitas yang ada.
    </string>
    <string name="img_no3_1">Foto Masjid Agung Jawa Tengah, Semarang</string>
    <string name="img_no3_2">Foto Masjid Agung Jawa Tengah, Semarang</string>
    <string name="img_no3_3">Foto Masjid Agung Jawa Tengah, Semarang</string>
    <string name="img_no3_4">Foto Masjid Agung Jawa Tengah, Semarang</string>
    <string name="img_no3_5">Foto Masjid Agung Jawa Tengah, Semarang</string>
    <string name="txt_judul4">Masjid Istiqlal</string>
    <string name="txt_lok4">Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta</string>
    <string name="txt_loklengkap4">Jl. Taman Wijaya Kusuma, Ps. Baru, Kecamatan Sawah Besar, Kota Jakarta Pusat, Daerah Khusus Ibukota Jakarta</string>
    <string name="txt_desc4">
        Rekomendasi wisata religi Indonesia terkahir ini memiliki popularitas tak kalah terkenal dari tujuan-tujuan wisata religi sebelumya. Tak menjadi masjid terbesar di Indonesia, Masjid Istiqlal bahkan menjadi masjid terbesar yang ada di Asia Tenggara, lho!
    </string>
    <string name="txt_sejarah4">
        Setelah perang kemerdekaan Indonesia, mulai berkembang gagasan besar untuk mendirikan masjid nasional. Ide pembangunan masjid tercetus setelah empat tahun proklamasi kemerdekaan. Gagasan pembangunan masjid kenegaraan ini sejalan dengan tradisi bangsa Indonesia yang sejak zaman kerajaan purba pernah membangun bangunan monumental keagamaan yang melambangkan kejayaan negara. Misalnya pada zaman kerajaan Hindu-Buddha bangsa Indonesia telah berjaya membangun candi Borobudur dan Prambanan. Karena itulah pada masa kemerdekaan Indonesia terbit gagasan membangun masjid agung yang megah dan pantas menyandang predikat sebagai masjid negara berpenduduk muslim terbesar di dunia.
    </string>
    <string name="txt_shortdesc4">
        Diprakarsai oleh Ir. Soekarno, Masjid Istiqlal yang mampu menampung hingga 200,000 jamaah ini tak pernah sepi, khususnya pada saat hari-hari besar umat Islam seperti Idul Fitri dan juga Idul Adha.
    </string>
    <string name="img_no4_1">Foto Masjid Istiqlal</string>
    <string name="img_no4_2">Foto Masjid Istiqlal</string>
    <string name="img_no4_3">Foto Masjid Istiqlal</string>
    <string name="img_no4_4">Foto Masjid Istiqlal</string>
    <string name="img_no4_5">Foto Masjid Istiqlal</string>
    <string name="txt_judul5">Masjid Menara Kudus</string>
    <string name="txt_lok5">Kota Jawa Tengah, Indonesia</string>
    <string name="txt_loklengkap5">Jl. Menara, Pejaten, Kauman, Kec. Kota Kudus, Kabupaten Kudus, Jawa Tengah</string>
    <string name="txt_desc5">Merupakan peninggalan anggota Wali Songo, Masjid Menara Kudus terletak di daerah Kauman, Kecamatan Kota Kudus, Jawa Tengah. Dibangun pada masa Sunan Kudus menyebarkan agama Islam di daerah Kudus, tahun 1549 Masehi atau 856 Hijriah, masjid tersebut masih sangat lestari dan menjadi landmark bagi kota Kudus.</string>
    <string name="txt_sejarah5">"Berdirinya Masjid Menara Kudus tidak terlepas dari peran Sunan Kudus sebagai penggagas dan pendiri. Sebagaimana Walisongo yang lainnya, Sunan Kudus menggunakan pendekatan kultural (budaya) dalam berdakwah. Ia mengadaptasi dan melakukan pribumisasi ajaran Islam di tengah masyarakat yang telah memiliki budaya mapan dalam pengaruh agama Hindu dan Buddha. Akulturasi budaya Hindu dan Budha dalam dakwah Islam yang dilakukan Sunan Kudus terlihat jelas pada arsitektur dan konsep bangunan Masjid Menara Kudus.     "</string>
    <string name="txt_shortdesc5">"Masjid ini memiliki mitos, yaitu pejabat yang tak jujur bisa kehilangan jabatannya setelah melintas di lorong gapura Masjid saat mengenakan pakaian dinasnya.     "</string>
    <string name="img_no5_1">Foto Masjid Menara Kudus</string>
    <string name="img_no5_2">Foto Masjid Menara Kudus</string>
    <string name="img_no5_3">Foto Masjid Menara Kudus</string>
    <string name="img_no5_4">Foto Masjid Menara Kudus</string>
    <string name="img_no5_5">Foto Masjid Menara Kudus</string>
    <string name="txt_judul6">Masjid Nurul Yakin (Masjid 1000 Pintu)</string>
    <string name="txt_lok6">Kota Tanggerang, Banten</string>
    <string name="txt_loklengkap6">Jl. Kampung Bayur, RT.003/RW.004, Periuk Jaya, Kec. Periuk, Kota Tangerang, Banten</string>
    <string name="txt_desc6">
        Masjid Nurul Yakin didirikan oleh keturunan Arab bernama Syekh Al-Bakhir Mahdi yang meninggal tahun 2012. Digunakan sebagai tempat berziarah para pengunjungnya, Masjid Nurul Yakin memiliki bangunan unik dan berbeda dari masjid-masjid pada umumnya, yaitu jumlah pintunya yang banyak dan nyaris tak terhitung. Pintu-pintu tersebut berukuran cukup kecil sehingga Anda wajib hati-hati saat melintasinya.
    </string>
    <string name="txt_sejarah6">
        Lalu kenapa dijuluki Masjid Pintu Seribu? jawaban ringkasnya adalah masjid tersebut memiliki banyak pintu yang tidak diketahui secara persis berapa pintu yang terdapat dalam masjid tersebut, seorang pengelola menyebut masjid Pintu Seribu sebenarnya memiliki 999 pintu namun digenapkan menjadi 1000.
    </string>
    <string name="txt_shortdesc6">Di tempat ini Anda diminta untuk mengingat akhirat dan dosa-dosa yang sudah Anda perbuat sebelumnya, hingga akhirnya Anda akan merasa lebih mensyukuri segala kehidupan yang dimiliki saat ini.</string>
    <string name="img_no6_1">Foto Masjid Nurul Yakin (Masjid 1000 Pintu)</string>
    <string name="img_no6_2">Foto Masjid Nurul Yakin (Masjid 1000 Pintu)</string>
</resources>